# c_minilib_init

./: README.md  TO-DO.txt  meson.build  meson_options.txt  tasks.py
docs/: .$architecture.drawio.bkp  architecture.drawio
example/: main.c  meson.build  module_a.c  module_b.c
include/: c_minilib_init.h
src/: c_minilib_init.c  meson.build
src/utils/: cmi_common.h  cmi_dependencies.c  cmi_dependencies.h  cmi_error.h  cmi_registration.h  meson.build
subprojects/: c_minilib_error.wrap  c_minilib_mock.wrap
test/: meson.build
test/test_c_minilib_init.d/: meson.build  test_c_minilib_init.c  test_destroy.c  test_init.c  test_mock_registration.c
